return actual list of participants in conversation events.